local storage added

--- a/index.html
+++ b/index.html
@@ -57,6 +57,6 @@
                 
             </div>
     </div>
-    <script src="node.js"></script>
+    <script defer src="node.js"></script>
 </body>
 </html>
