--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/2723f43300.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
-    <link rel="icon" href="title logo.png" >
+    <link rel="icon" href="image.png" type=  "image" sizes= "12x12" >
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Todo List</title>
 </head>
 <body>
     <div id="main_box">
